# morfis-frontend

./: .dockerignore  .gitignore  Dockerfile  GIT_ESSENTIAL_FILES.md  LOCAL_DEBUG.md  README.md  app.py  auth_cookies.txt  build_yacv.sh  cookies.txt  demo_yacv_integration.py  deploy-frontend-docker.sh  docker-compose.prod.yml  docker-compose.yml  env.example  flask_logs.txt  fresh_cookies.txt  models.py  morfis-key.pem  nginx.conf  pyproject.toml  requirements.txt  run_container.sh  run_debug.py  run_dev.py  run_dev.sh  run_local.py  run_prod.py  run_prod.sh  test_build123d.py  test_yacv_simple.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  start-debug.sh
keys/: README.md  morfis-key-i-08cbe4ac13e9d7277.pem
static/cadmodels/: 994.step  model.step
static/css/: style.css
static/js/: color_selector.js  download_handler.js  integrated_viewer.js  main.js  measure_tool.js  mobile_input.js  save_design.js  step_preview.js  three_viewer.js  trajectory.js  waitlist.js  yacv_build123d_viewer.js
templates/: index.html  step_viewer.html  trajectory.html  yacv_demo.html
yacv_custom/: __init__.py  cad.py  index.html  logo.py  myhttp.py  package-lock.json  pubsub.py  tessellate.py  tsconfig.json  yacv.py
yacv_custom/assets/: licenses.txt
yacv_custom/frontend/: LicensesDialogContent-3o4X7wN_.js  LicensesDialogContent-3o4X7wN_.js.map  LicensesDialogContent-B0kC5rd_.js  LicensesDialogContent-B0kC5rd_.js.map  LicensesDialogContent-B90QNxdf.js  LicensesDialogContent-B90QNxdf.js.map  LicensesDialogContent-BI79TuEQ.js  LicensesDialogContent-BI79TuEQ.js.map  (+709 more)
(+7 files in other folders)
