[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-wtf>=1.2.2",
    "oauthlib>=3.2.2",
    "requests>=2.32.3",
    
    # Build123d and CAD dependencies
    "build123d==0.9.1",
    "yacv-server==0.10.10",
    
    # Core dependencies for Build123d
    "numpy==2.3.3",
    "pillow==11.3.0",
    "vtk==9.3.1",
    
    # Additional Build123d dependencies
    "pygltflib>=1.16.2",
    "cadquery-ocp>=7.8.0",
    "anytree>=2.8.0",
    "ezdxf>=1.1.0",
    "svgpathtools>=1.5.1",
    "trianglesolver>=1.0.0",
]
